# Stock-predictor

./: .gitignore  Makefile  README.md  cerebrium.toml  pyproject.toml  requirements.txt
.github/workflows/: deploy_api.yml
notebooks/: nb.ipynb
src/: deploy.py  predict.py  test_endpoint.py
src/data/: make_data.py  preprocessing.py
src/models/model1/: train.py
src/models/model2/: hyperparameters_tuning.py  train.py
src/utils/: paths.py
