[tool.poetry]
name = "stock-predictor"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
packages = [{include = "stock_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
requests = "^2.31.0"
fire = "^0.5.0"
fastparquet = "^2023.7.0"
scikit-learn = "^1.3.0"
comet-ml = "^3.33.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
