[tool.poetry]
name = "stock-predictor"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
packages = [{include = "stock_predictor"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "1.5.3"
comet-ml = "3.33.10"
cerebrium = "^1.1.1"
fire = "^0.5.0"
scikit-learn = "1.3.1"
requests = "^2.31.0"
xgboost = "^2.0.0"
fastparquet = "^2023.8.0"
pyarrow = "^13.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
