[tool.poetry]
name = "stock-predictor"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
packages = [{include = "stock_predictor"}]

[tool.poetry.dependencies]
python = "<3.14,>=3.12"
numpy = "^1.26.0"
optuna = "^3.3.0"
pyarrow = "^19.0.1"
setuptools = "^78.1.0"
python-dotenv = "^1.1.0"
xgboost = "^3.0.0"
pandas = "^2.2.3"
comet-ml = "^3.49.7"
scikit-learn = "^1.6.1"
fire = "^0.7.0"
cerebrium = "^1.39.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
